Fix mobile word wrap

--- a/assets/custom_style.css
+++ b/assets/custom_style.css
@@ -18,6 +18,7 @@
 }
 .sideBar {
     max-width: 30%;
+    overflow-wrap: break-word;
 }
 hr.rounded {
     display: none;
